prevent horizontal overflow

--- a/src/app/modules/layouts/MainLayout/MainLayout.scss
+++ b/src/app/modules/layouts/MainLayout/MainLayout.scss
@@ -10,10 +10,15 @@
 	left: 0px;
 	width: 100vw;
 	height: auto;
-	overflow:visible;
+	overflow: visible;
 	max-height: 100vh;
 	z-index: 0;
 	opacity: 0.7;
+
+	img {
+		width: 100%;
+		
+	}
 
 }
 
